--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -12,8 +12,9 @@
   <br>
 
   <label>Choose existing Artist:</label>
+  <label>Artist Name:</label>
   <% @artists.each do |artist| %>
-
+    <input type="text" name="song[artist_id]" value="<%=artist.id"><%=artist.name%></input>
   <% end %>
 
 
