--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -14,7 +14,7 @@
   <label>Choose existing Artist:</label>
   <label>Artist Name:</label>
   <% @artists.each do |artist| %>
-    <input type="text" name="song[artist_id]" value="<%=artist.id"%>><%=artist.name%></input>
+    <input type="text" name="song[artist_id]" value="<%=artist.id%>"><%=artist.name%></input>
   <% end %>
 
 
