--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -17,6 +17,7 @@
     <input type="text" name="song[artist_id]" value="<%=artist.id%>"><%=artist.name%></input>
   <% end %>
 
+<input type="submit" name="submit" value="submit">
 
 
 </form>
