--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,23 +1,21 @@
 <p>create a new song</p>
 
-<form action="/songs" method="post">
-  <label>Song Name:</label>
-  <input type="text" name="song[name]">
+<form action="/songs" method="POST">
+  <label> Artist Name </label>
+  <input type="text" name="Artist Name"> 
   <br>
 
-  <label>Genre Name:</label>
-  <% @genres.each do |genre| %>
-    <input type="checkbox" name="song[genre_id]" value="<%=genre.id%>"><%=genre.name%></input>
-  <% end %>
+  <label> Song Name </label>
+  <input type="text" name="Name"> 
   <br>
 
-  <label>Choose existing Artist:</label>
-  <label>Artist Name:</label>
-  <% @artists.each do |artist| %>
-    <input type="text" name="song[artist_id]" value="<%=artist.id%>"><%=artist.name%></input>
-  <% end %>
+  <label> Genres </label>
+  <% Genre.all.each do |genre| %>
+    <input id="<%= genre.name %>" type="checkbox" name="genres[]" value="<%= genre.id %>"><%= genre.name%>
+  <% end %><br><br>
 
-<input type="submit" name="submit" value="submit">
+  <label>Or Create a New Genre!</label>
+  <input type="text" name="Genre Name">
 
-
+  <input type="submit" value="Create">
 </form>
