--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,11 +1,11 @@
 <p>create a new song</p>
 
 <form action="/songs" method="POST">
-  <label> Artist Name </label>
+  <label> Artist Name: </label>
   <input type="text" name="Artist Name">
   <br>
 
-  <label> Song Name </label>
+  <label> Song Name: </label>
   <input type="text" name="Name">
   <br>
 
