Automatically backed up by Learn

--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,5 +1,9 @@
 <p>show songs</p>
 
+<% if flash.has?(:message) %>
+  <%= message %>	  <%= flash[:message] %>
+<% end %>	<% end %>
+
 <h1> <%=@song.name%> </h1>
 
 <a href="/artists/<%=@song.artist.slug %>"> <%=@song.artist.name %> </a>
